--- a/ProjetEvent/View Controllers/create Account/CreateAccountViewController.xib
+++ b/ProjetEvent/View Controllers/create Account/CreateAccountViewController.xib
@@ -24,6 +24,7 @@
                 <outlet property="phoneTxt" destination="8Lc-IN-22W" id="1BM-yd-3rH"/>
                 <outlet property="scroll" destination="7YL-rb-YIh" id="h9o-vg-4uU"/>
                 <outlet property="surnameTxt" destination="nUJ-dF-31U" id="tAP-18-PTG"/>
+                <outlet property="tapImg" destination="Chh-M9-vaG" id="Wu1-t8-Tsa"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -169,8 +170,15 @@
                         </textField>
                     </subviews>
                 </stackView>
-                <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="32U-hy-zZK">
-                    <rect key="frame" x="16" y="46" width="209" height="83"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bK5-4T-koG">
+                    <rect key="frame" x="16" y="46" width="89" height="83"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="89" id="KxS-QR-oKa"/>
+                        <constraint firstAttribute="height" constant="83" id="raX-dc-MLe"/>
+                    </constraints>
+                </imageView>
+                <button opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="752" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="32U-hy-zZK">
+                    <rect key="frame" x="113" y="60" width="115" height="54"/>
                     <state key="normal" title="+ Add a photo">
                         <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
@@ -178,43 +186,38 @@
                         <action selector="addPhoto:" destination="-1" eventType="touchUpInside" id="AxD-T6-F5d"/>
                     </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Photo" translatesAutoresizingMaskIntoConstraints="NO" id="bK5-4T-koG">
-                    <rect key="frame" x="16" y="46" width="89" height="83"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="83" id="Dst-J9-I5L"/>
-                        <constraint firstAttribute="width" constant="89" id="S8n-eP-GeI"/>
-                    </constraints>
-                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <gestureRecognizers/>
             <constraints>
-                <constraint firstItem="bK5-4T-koG" firstAttribute="leading" secondItem="L2C-Ms-IXo" secondAttribute="leading" constant="16" id="4Kn-kb-gfQ"/>
                 <constraint firstItem="L2C-Ms-IXo" firstAttribute="trailing" secondItem="jkb-pa-OIk" secondAttribute="trailing" constant="16" id="4Zz-l1-qeg"/>
+                <constraint firstItem="32U-hy-zZK" firstAttribute="top" secondItem="L2C-Ms-IXo" secondAttribute="top" constant="40" id="74y-Qy-f6n"/>
+                <constraint firstItem="32U-hy-zZK" firstAttribute="leading" secondItem="bK5-4T-koG" secondAttribute="trailing" constant="8" id="76P-a8-0KL"/>
                 <constraint firstItem="L2C-Ms-IXo" firstAttribute="bottom" secondItem="XWc-q8-Ejc" secondAttribute="bottom" priority="250" constant="297" id="7fn-Z2-zHs"/>
-                <constraint firstItem="bK5-4T-koG" firstAttribute="top" secondItem="L2C-Ms-IXo" secondAttribute="top" constant="26" id="8mN-vH-Ktz"/>
-                <constraint firstItem="L2C-Ms-IXo" firstAttribute="trailing" secondItem="bK5-4T-koG" secondAttribute="trailing" constant="270" id="Buc-v1-4XW"/>
                 <constraint firstItem="L2C-Ms-IXo" firstAttribute="trailing" secondItem="EgO-to-eJk" secondAttribute="trailing" constant="16" id="DwL-tW-2ds"/>
                 <constraint firstItem="jkb-pa-OIk" firstAttribute="top" secondItem="EgO-to-eJk" secondAttribute="bottom" constant="26" id="Edp-TK-i8J"/>
-                <constraint firstItem="bK5-4T-koG" firstAttribute="centerY" secondItem="32U-hy-zZK" secondAttribute="centerY" id="IYk-lb-ebZ"/>
                 <constraint firstItem="L2C-Ms-IXo" firstAttribute="trailing" secondItem="A1r-ch-AAj" secondAttribute="trailing" constant="16" id="KLT-hs-XJR"/>
-                <constraint firstItem="32U-hy-zZK" firstAttribute="leading" secondItem="L2C-Ms-IXo" secondAttribute="leading" constant="16" id="M7P-Nq-eET"/>
-                <constraint firstItem="32U-hy-zZK" firstAttribute="top" secondItem="L2C-Ms-IXo" secondAttribute="top" constant="26" id="OWd-XU-2gb"/>
                 <constraint firstItem="A1r-ch-AAj" firstAttribute="top" secondItem="jkb-pa-OIk" secondAttribute="bottom" constant="26" id="Rj9-DO-AVt"/>
                 <constraint firstItem="XWc-q8-Ejc" firstAttribute="top" secondItem="A1r-ch-AAj" secondAttribute="bottom" constant="26" id="SMd-md-fZP"/>
                 <constraint firstItem="jkb-pa-OIk" firstAttribute="leading" secondItem="L2C-Ms-IXo" secondAttribute="leading" constant="16" id="SR5-bZ-dli"/>
+                <constraint firstItem="EgO-to-eJk" firstAttribute="top" secondItem="32U-hy-zZK" secondAttribute="bottom" constant="71" id="USR-eT-yZi"/>
                 <constraint firstItem="L2C-Ms-IXo" firstAttribute="trailing" secondItem="XWc-q8-Ejc" secondAttribute="trailing" constant="16" id="UlY-lR-r4g"/>
                 <constraint firstItem="XWc-q8-Ejc" firstAttribute="leading" secondItem="L2C-Ms-IXo" secondAttribute="leading" constant="16" id="WtG-03-Jny"/>
-                <constraint firstItem="L2C-Ms-IXo" firstAttribute="trailing" secondItem="32U-hy-zZK" secondAttribute="trailing" constant="150" id="XId-4Q-9p6"/>
                 <constraint firstItem="A1r-ch-AAj" firstAttribute="leading" secondItem="L2C-Ms-IXo" secondAttribute="leading" constant="16" id="YXD-vx-XCG"/>
-                <constraint firstItem="EgO-to-eJk" firstAttribute="top" secondItem="bK5-4T-koG" secondAttribute="bottom" constant="56" id="Zzq-qM-GkE"/>
-                <constraint firstItem="bK5-4T-koG" firstAttribute="centerY" secondItem="32U-hy-zZK" secondAttribute="centerY" id="ciH-9I-e1B"/>
+                <constraint firstItem="bK5-4T-koG" firstAttribute="centerY" secondItem="32U-hy-zZK" secondAttribute="centerY" id="bUT-Rw-VG6"/>
+                <constraint firstItem="EgO-to-eJk" firstAttribute="top" secondItem="Hw3-D1-xLn" secondAttribute="top" constant="185" id="kJd-00-2nI"/>
                 <constraint firstItem="EgO-to-eJk" firstAttribute="leading" secondItem="L2C-Ms-IXo" secondAttribute="leading" constant="16" id="sEP-iK-X6a"/>
-                <constraint firstItem="EgO-to-eJk" firstAttribute="top" secondItem="32U-hy-zZK" secondAttribute="bottom" constant="56" id="x2Y-n7-0RT"/>
+                <constraint firstItem="bK5-4T-koG" firstAttribute="leading" secondItem="L2C-Ms-IXo" secondAttribute="leading" constant="16" id="vtg-cm-6PV"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="L2C-Ms-IXo"/>
             <point key="canvasLocation" x="-464.5" y="108"/>
         </view>
+        <tapGestureRecognizer id="Chh-M9-vaG">
+            <connections>
+                <action selector="addPhoto:" destination="-1" id="OxQ-FG-US5"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
         <image name="Photo" width="89" height="83"/>
